<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/plantnew"
    tools:context="com.lotusbeta.agentbank.menu">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deposit"
            android:layout_row="0"
            android:layout_column="2"
            android:src="@drawable/register"
            android:layout_gravity="center"
            android:contentDescription="@string/depositMenuButton" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loan"
            android:layout_row="1"
            android:layout_column="2"
            android:src="@drawable/loan"
            android:layout_gravity="center"
            android:contentDescription="@string/loanMenuButton" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/withdraw"
            android:layout_row="1"
            android:layout_column="0"
            android:src="@drawable/withdrawal"
            android:layout_gravity="center"
            android:contentDescription="@string/withdrawalMenuButton" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:layout_row="0"
            android:layout_column="0"
            android:src="@drawable/register"
            android:layout_gravity="center"
            android:contentDescription="@string/registerMenuButton" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enquiry"
            android:layout_row="2"
            android:layout_column="0"
            android:src="@drawable/enquiry"
            android:layout_gravity="center"
            android:contentDescription="@string/enquiryMenuButton" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topup"
            android:layout_row="2"
            android:layout_column="2"
            android:src="@drawable/topup"
            android:layout_gravity="center"
            android:contentDescription="@string/topMenuButton" />

    </GridLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:id="@+id/imageView"
        android:src="@drawable/unityheader"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"

        android:layout_alignParentEnd="true" />

</RelativeLayout>
