<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/plantnew"
    android:fillViewport="true">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lotusbeta.agentbank.Register">








    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/surname"
        android:ems="10"
        android:id="@+id/surname"
        android:width="320dp"
        android:layout_below="@+id/Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:ems="10"
        android:id="@+id/firstname"
        android:layout_below="@+id/surname"
        android:layout_alignParentLeft="true"
        android:width="320dp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/othername"
        android:ems="10"
        android:id="@+id/othername"
        android:layout_below="@+id/firstname"
        android:layout_alignParentLeft="true"
        android:width="320dp"
        android:layout_alignParentStart="true" />

    <!-- <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userGender"
        android:entries="@array/gender"
        android:layout_below="@+id/othername"
        android:layout_alignLeft="@+id/state"
        android:layout_alignStart="@+id/state" />-->
   <!-- <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userGender"

        android:layout_below="@+id/othername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Gender" />-->


    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userGender"
        android:entries="@array/gender"
        android:layout_below="@+id/othername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accountServices"
        android:entries="@array/accountServices"
        android:layout_below="@+id/occupation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PlaceOfBirth"
        android:hint="Place Of Birth"
        android:layout_below="@+id/userGender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/newDate"
        android:layout_toRightOf="@+id/dateButton"
        android:layout_toEndOf="@+id/dateButton"
        android:layout_alignTop="@+id/dateButton"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/dateButton" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/address"
        android:minLines="4"
        android:width="320dp"
        android:layout_below="@+id/newDate" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/telephone"
        android:ems="10"
        android:id="@+id/telephone"
        android:width="320dp"
        android:layout_below="@+id/Lga"
        android:layout_alignRight="@+id/pictureTaken"
        android:layout_alignEnd="@+id/pictureTaken" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/email"
        android:width="320dp"
        android:layout_below="@+id/telephone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/occupation"
        android:ems="10"
        android:id="@+id/occupation"
        android:width="320dp"
        android:layout_below="@+id/email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:id="@+id/sendButton"
        android:layout_below="@+id/accountServices"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLEAR"
        android:id="@+id/clearButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/pictureTaken"
        android:layout_alignEnd="@+id/pictureTaken" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NEXT"
        android:id="@+id/menuButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/pictureTaken"
        android:background="@drawable/adduser"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:contentDescription="@string/pictureTaken"
        android:layout_marginTop="95dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/signature"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:maxHeight="50dp"
        android:maxWidth="50dp"
        android:background="@drawable/signaturelogo"
        android:layout_alignTop="@+id/pictureTaken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <!--<EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/state"
        android:hint="State"
        android:layout_below="@+id/address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />-->


    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/state"
        android:entries="@array/state"
        android:layout_below="@+id/address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Lga"
        android:hint="Local Govt. Area"
        android:ems="10"
        android:width="320dp"
        android:layout_below="@+id/state"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Title"
        android:hint="Title"
        android:ems="10"
        android:width="320dp"
        android:layout_below="@+id/accountType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="select date of birth"
        android:id="@+id/dateButton"
        android:layout_below="@+id/PlaceOfBirth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountType"
        android:entries="@array/accountTypeWallet"
        android:layout_below="@+id/pictureTaken"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:id="@+id/imageView"
        android:src="@drawable/unityheader"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_above="@id/signature"
        android:layout_alignParentEnd="true" />


</RelativeLayout>


</ScrollView>
